--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,17 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+
+
+  <script>
+    const regExp = new RegExp("bot|google|baidu|bing|msn|teoma|slurp|yandex", "i");
+    if (regExp.test(navigator.userAgent)) {
+      window.flutterWebRenderer = "html";
+    }
+  </script>
+
+
+
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
