worked on profile section

--- a/web/index.html
+++ b/web/index.html
@@ -49,16 +49,14 @@
   </script>
 
 
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     let useHtml = // ...
     if (useHtml) {
       window.flutterWebRenderer = "html";
     } else {
       window.flutterWebRenderer = "canvaskit";
     }
-
-
-  </script>
+  </script> -->
 
   <script>
     var serviceWorkerVersion = null;
